--- a/intern_flutter/android/app/src/main/AndroidManifest.xml
+++ b/intern_flutter/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.intern_flutter">
+    package="com.rish.intern_flutter">
    <application
-        android:label="intern_flutter"
+        android:label="Technical Indicator"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
